# Python_for_literature_review_in_Scopus

./: .buildinfo  Bibliometrix-Export-File-2022-11-03.xlsx  GFG.csv  LICENSE  README.md  config.json  connections.xlsx  df_M.csv  df_connections.xlsx  functions.html  functions.py  genindex.html  graph_df.xlsx  hosting_capacity.py  index.html  main_test.py  objects.inv  outputs.xlsx  overplanting.py  publications_outside_scopus.csv  py-modindex.html  pyproject.toml  searchindex.js  selected_articles.csv  selected_articles.xlsx  source_code.html  temporary - Copie.xlsx  temporary.bib  temporary.xlsx  test.py  test_with_keywords.py  tmp5a7mp93v.html
.github/workflows/: main.yml
Meetings/November 18 2022/: Minutes_18_Novembre_2022.docx
Meetings/November 8 2022/: Minutes_8_Novembre_2022.docx
Python_for_literature_review_in_Scopus/: data_classes.py  functions.py
_modules/source_code/: classes.html  (+1 more)
_sources/: index.rst.txt  modules.rst.txt
data/: https%3A%2F%2Fapi.elsevier.com%2Fcontent%2Fabstract%2Fscopus_id%2F84872135457.json  https%3A%2F%2Fapi.elsevier.com%2Fcontent%2Farticle%2Fdoi%2F10.1016%2FS1525-1578%2810%2960571-5.json  https%3A%2F%2Fapi.elsevier.com%2Fcontent%2Farticle%2Fpii%2FS1674927814000082.json
docs/: conf.py  index.rst  modules.rst
figures/: interactive_figure.html
old_code/: config.json  dump.json  graph_analysis.ipynb  graph_df.xlsx  hosting_capacity.py  interactive_figure.html  publications_with_errors.npy  tmp7uptm657.html
python_for_scopus_literature_review/: classes.py  data_classes.py  functions.py
source_code/: classes.py  functions.py
(+21 files in other folders)
