[tool.poetry]
name = "syster-project"
version = "0.1.0"
description = ""
authors = ["Ildar Daminov <daminovib@gmail.com>"]
readme = "README.md"
packages = [{include = "syster_project"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
ipykernel = "^6.17.1"
networkx = "^2.6.3" # "^2.8.8" # 
bokeh = "2.4.1" # "^3.0.2" # 
bibtexparser = "^1.4.0"
plotly = "^5.11.0"
openpyxl = "^3.0.10"
scipy = "^1.9.3"
seaborn = "^0.12.1"
scikit-learn = "^1.1.3"
Sphinx = {version = "^4.5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
